Different text scrolling speeds between desktop and mobile

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				
 				<p class="mail-container"><a class="consolas glowing-green" href="mailto:contact@hailmacbeth.com">contact@hailmacbeth.com</a></p>
 				
-				<p class="consolas small-text">All communications are monitored by Macbeth Networks<br>
+				<p class="consolas small-text">All communications are monitored by <br>Macbeth Networks™<br>
 					Unauthorized transmissions will be investigated<br>
 					Macbeth Networks Compliance Report #045-22
 				</p>
